syntax = "proto3";

import "common.proto";
import "client_logic_common.proto";

message LoginRequest
{
  string account = 1;
  string password = 2;
}

message LoginResponse
{
	ClientError error = 1;
  repeated c_account_simple_player players = 2;
}

message CreatePlayerRequest
{
	
}

message CreatePlayerResponse
{
	ClientError error = 1;
	repeated c_account_simple_player players = 2;
}

message EnterGameRequest
{
	uint64 player_id  = 1;
}

message EnterGameResponse
{
	ClientError error = 1;
}

message LeaveGameRequest
{
}

message LeaveGameResponse
{
	ClientError error = 1;
}